2009-04-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c: Adding helpful debug prints.

2009-04-28  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#112273 - Hildon-home customization features are broken in
	latest CP build.

	* src/hildon-desktop-views.schemas: Enable all four home views.

2009-04-28  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c: Remove call to 
	  mb_adjust_dialog_title_position (as we never paid attention to 
	  it anyway). This stops theme change which causes dialog title
	  flickering sometimes

2009-04-28  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-home.h
	* src/home/hd-home.c: Partial fix for NB#109445, full fix for 
	  NB#111647, NB#109899, NB#109258. Make sure that when we leave
	  the HOME_EDIT_DLG state, we close any dialogs that might have	  
	  been open in it.
	* src/home/hd-render-manager.h: Now make sure we don't grab the
	  area covered by notifications in the HOME_EDIT_DLG state. This
	  isn't really needed it turns out, but it is good practice.
	* src/tidy/tidy-blur-group.c: Small tweak to allow multiple blur
	  passes each frame (makes unblurring less visible when what is
	  blurred changes)

2009-04-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#113103 Desktop crashes when camera application is closed
	NB#111831 zero division crashes in hd-task-navigator.c:layout_thumbs

	* src/home/hd-task-navigator:
	  Behave when someone tries to remove a nonexisting thumbnail.
	  This is a bug somewhere else but we don't crash at least.

	BTW we forgot to celebrate that hd-task-navigator.c
	is over 3000 lines now (and weights more than 100 kilobytes).

2009-04-27  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Handle maemo-launcher ApplicationDied signal, informing the user.
	For NB#101726.

	* src/home/hd-switcher.c:
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-launcher-item.c:
